@@ -62,6 +62,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/ALL_Notes.rpt">Allele Notes with HTML errors</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_OrphanGenotype.sql.rpt">Orphan Genotypes</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_SharedSynonyms.rpt">Markers with Shared Synonyms</A> <B>(dlb)</B>
+<LI><A HREF="/data/reports/qcreports_db/output/ALL_NewAllele.current.rpt">New Alleles</A> <B>(acv)</B>
 <LI><A HREF="http://aretha.jax.org/jax/tbase">TBASE</A>
 </OL>
 
