@@ -1,3 +1,11 @@
+TAG: qcreports_db-4-4-1-31
+DATE: 08/25/2011
+STAFF: lec
+CHANGES:
+1) TR10823/weekly/PHENO_ImageCheck.sql
+2) TR10778/mgd/GXD_DupGenotype.py
+3) TR10822/weekly/ALL_NewAlleles.py
+
 TAG: qcreports_db-4-4-1-30
 DATE: 08/22/2011
 STAFF: lec
